force-app/main/default/objects/Recibo__c/Recibo__c.object-meta.xml
<CustomObject>
    <label>Recibo</label>
    <nameField>
        <displayFormat>REC-{00000000}</displayFormat>
        <label>Nombre de Recibo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recibos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>