force-app/main/default/objects/Recibo__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <label>Factura</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Factura__c.Contrato__r.Orden_de_compra__c</field>
            <operation>equals</operation>
            <valueField>$Source.Orden_de_compra__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Recibos</relationshipLabel>
    <relationshipName>Recibos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>