force-app/main/default/objects/Recibo__c/fields/Fecha_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_pago__c</fullName>
    <label>Fecha de pago</label>
    <type>Date</type>
</CustomField>