force-app/main/default/objects/Recibo__c/fields/Importe_pagado__c.field-meta.xml
<CustomField>
    <fullName>Importe_pagado__c</fullName>
    <label>Importe pagado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>