force-app/main/default/objects/Recibo__c/fields/Tipo_recibo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_recibo__c</fullName>
    <label>Tipo recibo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>